# fu-Bot

./: .env.dev  .gitignore  README.md  bot.py  pyproject.toml  requirements.txt  tatus
src/plugins/: common.py  tools.py
src/plugins/__pycache__/: MapBonusMusic.xml
src/plugins/maimai/: B40generator.py  B50generator.py  functions.py  maimaiDX.py  music.py
src/plugins/maimai/__pycache__/: MapColor.xml
