[project]
name = "fuBot"
version = "0.1.0"
description = "fufuBot"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12" }
]
plugins = []
plugin_dirs = ["src/plugins"]
#builtin_plugins = ["echo"]
